# nn_bank_customer_churn

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: cleaning.ipynb  data_processing.ipynb  eda.ipynb
